--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<dependency>
 			<groupId>com.totalcross</groupId>
 			<artifactId>totalcross-sdk</artifactId>
-			<version>4.1.5-SNAPSHOT</version>
+			<version>5.0.0-RC1</version>
 		</dependency>
 	</dependencies>
 	
